FIX datepickers overlapping RTS topbar

--- a/public/css/rts.css
+++ b/public/css/rts.css
@@ -38,6 +38,10 @@ h4 {
 .modal-open .modal {
     z-index: 1350;
 }
+/* same for datepickers */
+.datepicker, .datepicker.datepicker-dropdown {
+    z-index: 1340 !important;
+}
 
 .btn-link {
     color: #af001e;
